Added I2C and SPI data providers. Upgraded to Unity 2017 (.NET 4.6)

--- a/Unity/GeometrySynth/Assembly-CSharp.csproj
+++ b/Unity/GeometrySynth/Assembly-CSharp.csproj
@@ -82,6 +82,8 @@
  <Reference Include="UnityEngine.Networking">
  <HintPath>/Applications/Unity5/Unity.app/Contents/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
  </Reference>
+ <Compile Include="Assets\GeometrySynth\Control\I2CDataProvider.cs" />
+ <Compile Include="Assets\GeometrySynth\Control\SPIDataProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
